# breakoutcpp

./: CMakeLists.txt
.cache/clangd/index/: cgltf.h.32BF532E0A4D1647.idx  config.h.C084247D6F4CA33D.idx  context.c.696188B7812F99CE.idx  dr_mp3.h.7899F27CF56549F1.idx  dr_wav.h.038C78822428BE0C.idx  egl_context.c.B9CBEAC7FC369101.idx  glad.h.EC1753277E95C604.idx  glfw3.h.5E7321808021CF7B.idx  glfw3native.h.2476B3C9862F4956.idx  glx_context.c.3361D9C63E29C7BB.idx  init.c.A3F2328CD5594FA8.idx  input.c.59A8CC9354406C34.idx  internal.h.9ECAAAAA2A5B4D8C.idx  jar_mod.h.F177089360E37E0B.idx  jar_xm.h.7D28B3CB8D24B302.idx  linux_joystick.c.06B5E9CDCDC4BA32.idx  linux_joystick.h.2509C66F12DEDF25.idx  m3d.h.F50EA4EB33E531F3.idx  main.cpp.DB3481F445E4A8F9.idx  mappings.h.CBC836BB56F7C117.idx  miniaudio.h.D0EC854138203F1D.idx  monitor.c.BEFCA40C3DF1514B.idx  msf_gif.h.9683642810AD0AF6.idx  null_init.c.66DC48DF96E69CAF.idx  null_joystick.c.00BF00BACB2A4275.idx  null_joystick.h.0AB86DFC393C0C6C.idx  null_monitor.c.2B42D46EC42E058C.idx  null_platform.h.EFD7054F65744C49.idx  null_window.c.2CDCDC5926A710EA.idx  osmesa_context.c.882889E3A8A63866.idx  par_shapes.h.0728A2642B8AF827.idx  platform.c.854DB82811A590B6.idx  platform.h.A35E32BEDAB463D8.idx  posix_module.c.D6F297288105D4A5.idx  posix_poll.c.EFC406AD1FEFE969.idx  posix_poll.h.6C005A2DDDABA757.idx  posix_thread.c.5AB1938CB3E1450F.idx  posix_thread.h.5BE1F3CFE6C60D2B.idx  posix_time.c.88674FA093B190E6.idx  posix_time.h.BAA8AA24CB713955.idx  (+38 more)
src/: main.cpp
